- moved other dart files to dartlib - drawing more bushes and placed in quadrants around road - fix image draw scaling - transmitter Pos in separate variable - transmitter invisible in mission 1 - LOB gathering is play/stop button instead of checkbox

--- a/web/play/styles.css
+++ b/web/play/styles.css
@@ -91,7 +91,7 @@ h2 {
     border: none;
 }
 
-#lobs-cb-with-text {
+#lobs-btn-with-text {
     display: flex;
     align-items: center;
     position: absolute;
@@ -104,7 +104,13 @@ h2 {
     height: 20px;
 }
 
-#lob-cb:focus {
+#lob-btn {
+    margin-left: 10px;
+    outline: none;
+    border: none;
+}
+
+#lob-btn:focus {
     outline: none;
 }
 
@@ -137,6 +143,10 @@ h2 {
     padding-top: 3.8px;
     padding-bottom: 3.8px;
     cursor: pointer;
+}
+
+.col-red {
+    color: red;
 }
 
 .game-btn:hover {
@@ -266,4 +276,5 @@ h2 {
 
 .FAQs {
     margin-left: 50px;
+    margin-right: 50px;
 }
